--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    api 'com.google.protobuf:protobuf-java:3.6.1'
+    api 'com.googlecode.protobuf-java-format:protobuf-java-format:1.2'
+    api 'org.apache.commons:commons-lang3:3.8.1'
 }
+
+//packagingOptions {
+//    exclude 'META-INF/DEPENDENCIES'
+//    exclude 'META-INF/NOTICE'
+//    exclude 'META-INF/LICENSE'
+//    exclude 'META-INF/LICENSE.txt'
+//    exclude 'META-INF/NOTICE.txt'
+//}
+
