--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <activity
             android:name=".ui.activity.TeacherCourseEditActivity"
             android:label="课程信息编辑" />
+        <activity
+            android:name=".ui.activity.TeacherCourseManageActivity"
+            android:label="课程详情" />
     </application>
 
 </manifest>
