--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <activity
             android:name=".ui.activity.TeacherCourseManageActivity"
             android:label="课程详情" />
+        <activity
+            android:name=".ui.activity.CourseCommentActivity"
+            android:label="课程评论" />
     </application>
 
 </manifest>
