--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         <activity
             android:name=".ui.activity.CourseCommentActivity"
             android:label="课程评论" />
+        <activity
+            android:name=".ui.activity.TeacherCourseSubscriptionActivity"
+            android:label="课程订阅列表" />
     </application>
 
 </manifest>
