--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
         <activity
             android:name=".ui.activity.TeacherCourseSubscriptionActivity"
             android:label="课程订阅列表" />
+        <activity
+            android:name=".ui.activity.ForumTopicActivity"
+            android:label="课程讨论区" />
+
     </application>
 
 </manifest>
