--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity
             android:name=".ui.activity.ForumActivity"
             android:label="课程讨论区" />
+        <activity
+            android:name=".ui.activity.ForumTopicActivity"
+            android:label="帖子详情"/>
 
     </application>
 
