#2 考试系统（不包含提交）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,14 @@
         <activity
             android:name=".ui.activity.QuestionSelectActivity"
             android:label="选择试题"/>
+        <activity
+            android:name=".ui.activity.ExamActivity"
+            android:label="考试列表"
+            />
+        <activity
+            android:name=".ui.activity.ExamEditActivity"
+            android:label="创建考试"
+            />
     </application>
 
 </manifest>
