--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
-//        jcenter()
+        jcenter()
     }
     dependencies {
         //noinspection GradleDependency
@@ -22,7 +22,7 @@ allprojects {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
-//        jcenter()
+        jcenter()
     }
 }
 
