--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,11 +61,13 @@
             android:label="选择试题"/>
         <activity
             android:name=".ui.activity.ExamActivity"
-            android:label="考试列表"
-            />
+            android:label="考试列表" />
         <activity
             android:name=".ui.activity.ExamEditActivity"
-            android:label="创建考试"
+            android:label="创建考试" />
+        <activity
+            android:name=".ui.activity.MessageActivity"
+            android:label="查看消息"
             />
     </application>
 
