--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,9 @@
             android:name=".ui.activity.MessageActivity"
             android:label="查看消息"
             />
+        <activity
+            android:name=".ui.activity.StudentMainActivity"
+            android:theme="@style/AppTheme.NoTitle" />
     </application>
 
 </manifest>
