#2 学生端课程界面及消息系统打通

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,9 @@
         <activity
             android:name=".ui.activity.StudentMainActivity"
             android:theme="@style/AppTheme.NoTitle" />
+        <activity
+            android:name=".ui.activity.StudentCourseDetailActivity"
+            android:label="课程详情" />
     </application>
 
 </manifest>
