--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     api 'com.google.protobuf:protobuf-java:3.6.1'
     api 'com.googlecode.protobuf-java-format:protobuf-java-format:1.2'
     api 'org.apache.commons:commons-lang3:3.8.1'
+    api 'com.github.gittjy:LoadingDialog:1.0.2'
 }
 
 //packagingOptions {
