--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -31,15 +32,15 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.protobuf:protobuf-java:3.6.1'
+    implementation 'com.googlecode.protobuf-java-format:protobuf-java-format:1.2'
+    implementation 'org.apache.commons:commons-lang3:3.8.1'
+    implementation 'com.github.gittjy:LoadingDialog:1.0.2'
+    implementation 'commons-io:commons-io:2.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    api 'com.google.protobuf:protobuf-java:3.6.1'
-    api 'com.googlecode.protobuf-java-format:protobuf-java-format:1.2'
-    api 'org.apache.commons:commons-lang3:3.8.1'
-    api 'com.github.gittjy:LoadingDialog:1.0.2'
-    api group: 'commons-io', name: 'commons-io', version: '2.4'
-    api 'com.leon:lfilepickerlibrary:1.8.0'
 }
 
 //packagingOptions {
