--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/zhy_treeview.jar')
+    implementation 'com.qmuiteam:qmui:1.2.0'
 }
 
 //packagingOptions {
